--- a/sass/components/_commandBtn.scss
+++ b/sass/components/_commandBtn.scss
@@ -5,5 +5,6 @@
     font-size: 1.1rem;
     border-radius:100px;
     color: #fff;
+    background-color: #686868;
     background-image: linear-gradient(0deg $color-primary $color-secondary);
 }
