--- a/sass/components/_commandBtn.scss
+++ b/sass/components/_commandBtn.scss
@@ -6,5 +6,5 @@
     border-radius:100px;
     color: #fff;
     background-color: #686868;
-    background-image: linear-gradient(0deg $color-primary $color-secondary);
+    background-image: linear-gradient(0deg, $color-primary, $color-secondary);
 }
