setting local and reser

--- a/sass/components/_commandBtn.scss
+++ b/sass/components/_commandBtn.scss
@@ -1,6 +1,6 @@
 .command__btn{
     border:0;
-    padding: 0.75 1.5rem;
+    padding: 0.75rem 1.5rem;
     font-weight: 500;
     font-size: 1.1rem;
     border-radius:100px;
