--- a/sass/components/_commandBtn.scss
+++ b/sass/components/_commandBtn.scss
@@ -4,6 +4,7 @@
     font-weight: 500;
     font-size: 1.1rem;
     border-radius:100px;
+    text-decoration: none;
     color: #fff;
     background-color: #686868;
     background-image: linear-gradient(0deg, $color-primary, $color-secondary);
