--- a/sass/pages/_homepage.scss
+++ b/sass/pages/_homepage.scss
@@ -1,20 +1,17 @@
+// Loader
 .container {
-    height: 100%;
+  height: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    & span {
-        margin: 1rem;
-    }
+    position: absolute;
+    width : 100%;
 }
 
 $size: 3vh;
 $anim-dur: 1000ms;
 $anim-delay: 200ms;
-
-
-
 
 .load {
     width: $size * 10;
@@ -22,11 +19,8 @@ $anim-delay: 200ms;
     display: flex;
     justify-content: space-evenly;
     margin-bottom: 0;
-    
-   
-    
     &__bar {
-        background-image:linear-gradient(0deg, $color-primary, $color-secondary);;
+        background-image:linear-gradient(0deg, $color-tertiary, $color-secondary);;
         height: 100%;
         width: $size;
         animation: bars $anim-dur backwards infinite alternate ease-in-out;
@@ -34,35 +28,20 @@ $anim-delay: 200ms;
             &--#{$i} {
                 animation-delay: $anim-delay * $i;
             }
-            &--#{$i}-inv {
-                animation-delay: $anim-delay * $i + random(100)*15ms;
-                animation-direction: alternate-reverse;
-                // animation-fill-mode: forwards;
-                background: $color-tertiary;
             }
         }
-        @for $i from 1 through 5 {
-            &--#{$i + 5} {
-                animation-direction: alternate-reverse;
-                background: pink;
-                animation-delay: $anim-delay * $i + (random(100)*20ms);
-            }
         }
-    }
-}
-
 @keyframes bars {
     0% { 
         transform: scaleY(0.5);
 
     }  
     100% { 
-        transform: scaleY(1.0);
-        
+        transform: scaleY(1.0);  
     }
 }
 
-
+// localisation
 .local{
     padding: 0.94rem 0rem;
     text-align: center;
@@ -72,14 +51,53 @@ $anim-delay: 200ms;
     font-weight: bold;
 }
 
+// reservation
 .reser{
-    height:15rem;
+    height:20rem;
     background-color: #F6F6F6;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    font-size: 1rem;
+    font-size: 1.2rem;
+}
+
+.fonc{
+    display:flex;
+    justify-content: center;
+    text-align: center;
+
+    &.fonc__container{
+        max-width: 1280px;
+        margin: auto;
+        position: relative;
+    }
+}
+
+   
+.fonc__lists{
+    padding:1.5rem;
+    margin:1rem 0 1rem 0.75rem;
+    width: 300px;
+    border-radius: 1.25rem;
+    background-color: #f6f6f6;
+    box-shadow: 0 2px 5px grey;
+    font-weight: bold;
+    list-style-type: none;
+    
+
+    &.fonc__lists:before {
+        background: #9356dc;
+        height: 1.5rem;
+        width: 1.5rem;
+        border-radius: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #fff;
+        position: absolute;
+        
+    }
 }
 
 
