--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,15 +1,16 @@
-
-  @use "sass:color";
-
+$font-stack: 'Roboto', sans-serif;
+$body-color: #f6f6f6;
 $color-primary: #9356DC;
 $color-secondary: #FF79DA;
 $color-tertiary: #99E2D0;
-$appPadding: 1rem;
+
+
 
 
 body, html {
-    margin: 0;
-    font-family: 'Roboto', sans-serif;
-    scroll-behavior: smooth;
-  }
+  margin: 0;
+  padding: 0;
+  font: 100% $font-stack;
+  background-color: $body-color;
+}
 
