--- a/sass/components/_commandBtn.scss
+++ b/sass/components/_commandBtn.scss
@@ -8,4 +8,5 @@
     color: #fff;
     background-color: #686868;
     background-image: linear-gradient(0deg, $color-primary, $color-secondary);
+    margin-top: 2rem;
 }
