--- a/sass/pages/_homepage.scss
+++ b/sass/pages/_homepage.scss
@@ -61,6 +61,7 @@
     margin-top: 2rem;
 }
 
+// fonctionnement
 .fonc__container{
     height: 12rem;
     align-items: center;
@@ -99,7 +100,6 @@
         background-color: #9356DC;
         padding: 0.24rem 0.6rem;
 }
-
     .fonc__lists i{
         margin-right: 2rem;
     }
