--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,4 +1,5 @@
 $font-stack: 'Roboto', sans-serif;
+$font-footer: 'Shrikhand', sans-serif;
 $body-color: #f6f6f6;
 $color-primary: #9356DC;
 $color-secondary: #FF79DA;
