--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,9 +8,9 @@
 
 @import "./components/card__btn";
 @import "./components/commandBtn";
+@import "./components/loader.scss";
 
 @import "./layout/header";
-@import "./layout/submenu";
 @import "./layout/menu__header.scss";
 
 @import "./pages/homepage";
