--- a/sass/pages/_homepage.scss
+++ b/sass/pages/_homepage.scss
@@ -57,7 +57,7 @@
         color: white;
         background-color: #9356DC;
         padding: 0.24rem 0.6rem;
-    }
+}
     .fonc__lists i{
         margin-right: 2rem;
     }
@@ -68,15 +68,60 @@
 }
 
 
+.restaurants__container{
+    padding: 1.5rem 1.5rem;
 
+  .restaurants__title{
+    display: flex;
+    justify-content: center;
+  }
 
-.card__img{
-    height:12rem;
-    width: 100%;
-    border: 0 solid transparent;
-    border-radius: 1rem 1rem 0 0;
-    object-fit: cover;
+  .cards {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    column-gap: 2rem;
+    row-gap: 2rem;
+  
+    @media (min-width:64rem) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
 }
+  .card {
+    background-color: white;
+    border-radius: 1rem;
+    position: relative;
+    text-decoration: none;
+    color: inherit;
+    display: block;
+  
+    &__img {
+      height: 12rem;
+      width: 100%;
+      border: transparent solid 0px;
+      border-radius: 1rem 1rem 0 0;
+      box-shadow: none;
+      object-fit: cover;
+    }
+  
+    &__content {
+      padding: 1rem;
+      position: relative;
+      display: flex;
+      align-items: center;
+      flex:1;
+    }
+  
+    &__title {
+      margin: 0;
+      margin-bottom: 0.25rem;
+    }
+  
+    &__loc {
+      margin: 0;
+    }
+  }
+  
 
 
 
