--- a/sass/pages/_homepage.scss
+++ b/sass/pages/_homepage.scss
@@ -91,8 +91,6 @@
     background-color: white;
     border-radius: 1rem;
     position: relative;
-    text-decoration: none;
-    color: inherit;
     display: block;
   
     &__img {
@@ -106,10 +104,6 @@
   
     &__content {
       padding: 1rem;
-      position: relative;
-      display: flex;
-      align-items: center;
-      flex:1;
     }
   
     &__title {
@@ -120,6 +114,11 @@
     &__loc {
       margin: 0;
     }
+
+   a{
+    text-decoration: none;
+      color: black;
+   }
   }
   
 
