--- a/sass/layout/footer.scss
+++ b/sass/layout/footer.scss
@@ -7,7 +7,7 @@ footer {
   
   }
     h4 {
-      font-family: ($font-footer);
+      font-family: ($font-secondary);
       font-size: 1.5rem;
       font-weight: 500;
       margin-left: 4.5rem;
