--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,7 @@
 @import "./layout/menu__header.scss";
 
 @import "./pages/homepage";
+@import "./pages/restaurants";
 
 @import "./layout/footer.scss";
 
