heart position and setting loader

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import "./components/card__btn";
 @import "./components/commandBtn";
 @import "./components/loader.scss";
+@import "./components/heart.scss";
 
 @import "./layout/header";
 @import "./layout/menu__header.scss";
