--- a/sass/components/loader.scss
+++ b/sass/components/loader.scss
@@ -9,6 +9,7 @@
     animation: load .01s;
     animation-delay: 1.75s;
     animation-fill-mode: both;
+    z-index: 10000;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -26,8 +27,8 @@ $anim-dur: 600ms;
 $anim-delay: 150ms;
 
 .load {
-    width: $size * 10;
-    height: $size* 7.5;
+    width: $size * 7;
+    height: $size* 2.5;
     display: flex;
     justify-content: space-evenly;
     margin-bottom: 0;
