complete menus restaurants pages

--- a/sass/components/_card__btn.scss
+++ b/sass/components/_card__btn.scss
@@ -1,8 +1,8 @@
 .card__btn {
     position: absolute;
-    right: 15px;
-    height: 30px;
-    width: 90px;
+    right: 0.9rem;
+    height: 1.8rem;
+    width: 5.6rem;
     text-align: center;
     background-color: ($color-tertiary);
     color: #078C6B;
