--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,9 +1,17 @@
 /* Header */
-.header {
+header {
     height: 70px;
     display: flex;
     justify-content: center;
     align-items: center;
+
+    .back{
+        position: absolute;
+        font-size: 1.5em;
+        left: 1.2rem;
+        top: 1.5rem;
+        color: inherit;
+    }
 }
 .header__logo{
         height: 30px;
