setting menu__card location and animation price and menu__check

--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -10,3 +10,9 @@
     transition: .3s;
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.6);    
 }
+
+@mixin flexbox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
