--- a/sass/components/_commandBtn.scss
+++ b/sass/components/_commandBtn.scss
@@ -14,7 +14,7 @@
     color: #fff;
     background-color: #686868;
     background-image: linear-gradient(0deg, $color-primary, $color-secondary);
-    margin: 2rem 0;
+    margin: 2rem 0 2rem 2rem;
     
       
       &:hover {
