--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,6 +1,6 @@
 /* Header */
 header {
-    height: 70px;
+    height: 4.3rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -14,5 +14,5 @@ header {
     }
 }
 .header__logo{
-        height: 30px;
+        height: 1.8rem;
 }
