--- a/sass/pages/_restaurants.scss
+++ b/sass/pages/_restaurants.scss
@@ -10,7 +10,7 @@
 }
 
   .menu {
-    margin-top: -4rem;
+    margin-top: 4rem;
     border-radius: 2rem 2rem 0 0;
     background-color: #f6f6f6;
     z-index: 1;
@@ -25,6 +25,7 @@
   
     &__title {
       font-family: $font-secondary;
+      font-size: 1.5rem;
     }
   }
   
@@ -35,13 +36,115 @@
       grid-template-columns: repeat(3,1fr);
       column-gap: 1rem;
     }
+    .submenu {
+      padding: 0 1rem;
+      &__title{
+        font-size: 1rem;
+        &::after{
+          content: "";
+          width: 3rem;
+          height: 0.25rem;
+          background-color: $color-tertiary;
+          position: absolute;
+          left: 0;
+          bottom: 0;
+        }
+      }
   }
   
-  .submenu {
-    max-width: 100%;
-    overflow: hidden;
-    padding: 0 1rem;
+  .menu__name{
+    line-height: 0;
+    font-size: 0.8rem;
+    padding-left:1rem ;
   }
+  .menu__price{
+    padding-right: 20px;
+    font-weight: bold;
+    padding-left: 7px;
+}
+  }
+  
+
+.menu__card{
+  height: 5rem;
+  margin-top: 1.8rem;
+  border-radius: 0.9rem;
+  background-color: white;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  justify-content: space-between;
+  &:hover .menu__check {
+    @include flexbox;
+    animation: slide 0.5s ease ;
+    transform-origin: right;
+
+    &:hover .menu__price {
+      padding-right: 70px;
+      transition: 0.5s ease ;
+  }
+  }
+ 
+
+  .menu__check {
+      display: none;
+      background: $color-tertiary;
+      border-radius: 0 15px 15px 0;
+      right: 0px;
+      padding: 0 13px;
+      height: 100%;
+      i {
+          font-size: 30px;
+          color: white;
+          transform: rotate(180deg);
+          animation: rotate 0.5s both;
+        
+      }
+  }
+}
+
+@keyframes rotate {
+  0% {
+      transform: rotate(0);
+}
+100% {
+      transform: rotate(360deg);
+  }
+}
+
+@keyframes slide {
+  0% {
+            transform: scaleX(0);
+  }
+  100% {
+            transform: scaleX(-50px);
+  }
+}
+
+
+  
+
+ 
+
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
   
 
   
