--- a/sass/components/_commandBtn.scss
+++ b/sass/components/_commandBtn.scss
@@ -1,7 +1,5 @@
 .wrap__btn{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flexbox;
     width: 100%;
 }
 .command__btn{
@@ -9,7 +7,7 @@
     padding: 0.75rem 1.5rem;
     font-weight: 500;
     font-size: 1.1rem;
-    border-radius:100px;
+    border-radius:6.25rem;
     text-decoration: none;
     color: #fff;
     background-color: #686868;
