--- a/sass/components/loader.scss
+++ b/sass/components/loader.scss
@@ -10,9 +10,7 @@
     animation-delay: 1.75s;
     animation-fill-mode: both;
     z-index: 10000;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @include flexbox;
 }
 
 @keyframes load{
