--- a/sass/components/loader.scss
+++ b/sass/components/loader.scss
@@ -21,7 +21,7 @@
   } 
 
 $size: 3vh;
-$anim-dur: 600ms;
+$anim-dur: 200ms;
 $anim-delay: 150ms;
 
 .load {
@@ -34,7 +34,7 @@ $anim-delay: 150ms;
         background-image:linear-gradient(0deg, $color-tertiary, $color-secondary);;
         height: 100%;
         width: $size;
-        animation: bars $anim-dur forwards alternate 2s ease-in-out;
+        animation: bars $anim-dur forwards alternate  ease-in-out;
         @for $i from 1 through 5 {
             &--#{$i} {
                 animation-delay: $anim-delay * $i;
