--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,7 +5,7 @@
 
 
 @import "./components/card__btn";
-@import "./components/commandBtn";
+@import "./components/pinkBtn";
 @import "./components/loader.scss";
 @import "./components/heart.scss";
 
