--- a/sass/components/_pinkBtn.scss
+++ b/sass/components/_pinkBtn.scss
@@ -2,7 +2,7 @@
     @include flexbox;
     width: 100%;
 }
-.command__btn{
+.pink__btn{
     border:0;
     padding: 0.75rem 1.5rem;
     font-weight: 500;
@@ -13,11 +13,21 @@
     background-color: #686868;
     background-image: linear-gradient(0deg, $color-primary, $color-secondary);
     margin: 2rem 0 2rem 2rem;
-    
+    @media (max-width:480px) {
+     margin:0;
+     font-size:0.8rem;
+     }
       
       &:hover {
         @include button-hover;
        
       }
+}
+
+#command__btn{
+  @media (max-width:480px) {
+    font-size:0.8rem;
+    margin: 2rem 0 2rem 1rem;
+    }
 }
 
