--- a/sass/layout/footer.scss
+++ b/sass/layout/footer.scss
@@ -1,13 +1,18 @@
 footer {
     background-color: #354146;
     color: white;
-    display: flex;
-    justify-content: center;
+    @include flexbox;
+
+    @media (max-width:480px) {
+      padding-right: 2rem;
+     }
     h4 {
       font-family: ($font-secondary);
       font-size: 1.5rem;
       font-weight: 500;
       margin-left: 4.5rem;
+
+      
     }
     ul {
       list-style-type: none;
