--- a/sass/pages/_homepage.scss
+++ b/sass/pages/_homepage.scss
@@ -17,6 +17,12 @@
     align-items: center;
     font-size: 1.2rem;
     margin-top: 2rem;
+    @media (max-width:480px) {
+      text-align: center;
+      white-space: pre-line;
+     }
+    
+  
 }
 
 // fonctionnement
@@ -25,11 +31,17 @@
     align-items: center;
     background-color: #fff;
     padding: 0.9rem 0;
-
+    @media (max-width:480px) {
+      height: 18rem;
+     }
     h2{
         @include h2-style;
         margin-top: 1.5rem;
-       
+        @media (max-width:480px) {
+         justify-content: start;
+         margin-left: 1rem;
+          
+        }
     }
 
     .fonc__list{
@@ -37,6 +49,10 @@
        justify-content: space-around;
        margin-right: 2rem;
        white-space: nowrap;
+       @media (max-width:480px) {
+        flex-direction: column;
+       }
+       
     }
     .fonc__lists{
         padding:1.5rem;
@@ -47,6 +63,12 @@
         font-weight: bold;
         list-style-type: none;
         margin-top: 2rem;
+        @media (max-width:480px) {
+       padding:1rem;
+       margin-top:1rem;
+       margin-left:1rem;
+        }
+       
         &:hover{
           @include button-hover;
         }
@@ -75,15 +97,18 @@
   .restaurants__title{
     @include h2-style;
     margin-bottom: 2rem;
+    @media (max-width:480px) {
+    flex: 0 0 auto;
+       margin-left:1.5rem;
   }
-
+  }
   .cards {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     column-gap: 2rem;
     row-gap: 2rem;
   
-    @media (min-width:64rem) {
+    @media (min-width:1024px) {
       grid-template-columns: repeat(2, 1fr);
     }
   }
