--- a/sass/pages/_restaurants.scss
+++ b/sass/pages/_restaurants.scss
@@ -1,21 +1,27 @@
 
-.img {
-    width: 100%;
-    height: 50vh;
-    &__image {
+.img__image {
         width: 100%;
         height: 100%;
         object-fit: cover;
-    }
+        position: fixed;
+}
+
+.menu__container{
+    box-sizing: border-box;
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+    padding-top:0.9rem;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    top: 9.3rem;
+    background-color: #f6f6f6;
+    border-radius: 1rem 1rem 0 0;
+
 }
 
   .menu {
-    margin-top: 4rem;
-    border-radius: 2rem 2rem 0 0;
-    background-color: #f6f6f6;
-    z-index: 1;
-    position: relative;
-  
     &__header {
       padding: 1rem 2rem 0 1rem;
       display: flex;
@@ -29,17 +35,11 @@
     }
   }
   
-  .submenus {
-    display: grid;
-  
-    @media (min-width:64rem) {
-      grid-template-columns: repeat(3,1fr);
-      column-gap: 1rem;
-    }
     .submenu {
       padding: 0 1rem;
       &__title{
         font-size: 1rem;
+        margin-top: 2rem;
         &::after{
           content: "";
           width: 3rem;
@@ -53,14 +53,13 @@
   }
   .menu__name{
     line-height: 0;
-    font-size: 0.8rem;
     padding-left:1rem ;
   }
   .menu__price{
     padding-right: 1.25rem;
     font-weight: bold;
 }
-  }
+  
 .menu__card{
   height: 5rem;
   margin-top: 1.8rem;
@@ -75,6 +74,7 @@
     @include flexbox;
     animation: slide 0.5s ease ;
     transform-origin: right;
+    
 
     &:hover .menu__price {
       padding-right: 4.3rem;
@@ -95,6 +95,18 @@
           animation: rotate 0.5s both;
       }
   }
+
+  h3{
+    @media (max-width:480px) {
+      font-size:1rem;
+     }
+    }
+    p{
+     @media (max-width:480px) {
+      font-size:.8rem;
+     
+     }
+    }
 }
 
 @keyframes rotate {
