--- a/sass/pages/_restaurants.scss
+++ b/sass/pages/_restaurants.scss
@@ -46,8 +46,8 @@
           height: 0.25rem;
           background-color: $color-tertiary;
           position: absolute;
-          left: 0;
-          bottom: 0;
+          display: flex;
+          justify-content: left;
         }
       }
   }
@@ -74,10 +74,7 @@
     @include flexbox;
     animation: slide 0.5s ease ;
     transform-origin: right;
-    
-
     &:hover .menu__price {
-      padding-right: 4.3rem;
       transition: 0.5s ease ;
   }
   }
