--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,11 +2,6 @@
 header {
     height: 4.3rem;
     @include flexbox;
-    
-    .header{
-        position: fixed;
-        z-index: 1;
-    }
 
     .back{
         position: absolute;
@@ -20,4 +15,12 @@ header {
 
 .header__logo{
         height: 1.8rem;
+}
+
+.header{
+    width: 100%;
+    position: fixed;
+    top: 0;
+    background-color: $body-color;
+    z-index: 3;
 }
