setting style responsive mobile

--- a/sass/layout/footer.scss
+++ b/sass/layout/footer.scss
@@ -5,28 +5,36 @@ footer {
 
     @media (max-width:480px) {
       padding-right: 2rem;
+      justify-content: flex-start;
      }
     h4 {
       font-family: ($font-secondary);
       font-size: 1.5rem;
       font-weight: 500;
       margin-left: 4.5rem;
+      @media (max-width:480px) {
+        margin-left: 2.5rem;
+       }
 
       
     }
     ul {
       list-style-type: none;
+      
      
   
       li {
         padding: 5px 0 5px 0;
         line-height: 1.5;
-  
+        
         a {
           color: white;
           display: flex;
           justify-content: center;
           text-decoration: none;
+          @media (max-width:480px) {
+            justify-content: flex-start;
+           }
         }
         }
       }
