--- a/sass/pages/_homepage.scss
+++ b/sass/pages/_homepage.scss
@@ -65,7 +65,7 @@
         list-style-type: none;
         margin-top: 2rem;
         @media (min-width:300px){
-        padding:1.5rem;
+        padding-right: 1rem;
         margin-top:1rem;
         }
         @media (min-width:600px )and (max-width:850px){
