--- a/sass/pages/_homepage.scss
+++ b/sass/pages/_homepage.scss
@@ -46,13 +46,16 @@
 
     .fonc__list{
        display: flex;
-       justify-content: space-between;
+       justify-content: space-around;
        margin-right: 2rem;
        white-space: nowrap;
        @media (max-width:480px) {
         flex-direction: column;
         align-items: center;
-       }
+      }
+      @media (max-width:900px) {
+        justify-content: space-between;
+     }
        
     }
     .fonc__lists{
@@ -65,7 +68,6 @@
         list-style-type: none;
         margin-top: 2rem;
         @media (min-width:300px){
-        padding-right: 1rem;
         margin-top:1rem;
         }
         @media (min-width:600px )and (max-width:850px){
