--- a/sass/layout/footer.scss
+++ b/sass/layout/footer.scss
@@ -1,40 +1,37 @@
 footer {
     background-color: #354146;
     color: white;
-    @include flexbox;
-
-    @media (max-width:480px) {
-      padding-right: 2rem;
+    padding:0.3rem;
+    @media (max-width:500px) {
+      display: flex;
       justify-content: flex-start;
      }
     h4 {
       font-family: ($font-secondary);
       font-size: 1.5rem;
       font-weight: 500;
-      margin-left: 4.5rem;
-      @media (max-width:480px) {
-        margin-left: 2.5rem;
-       }
-
+      @include flexbox;
       
     }
     ul {
       list-style-type: none;
-      
-     
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 0;
+      @media (max-width:500px){
+        display: block;
+        padding-left: 2rem;
+      }
   
       li {
         padding: 5px 0 5px 0;
         line-height: 1.5;
         
+        
         a {
           color: white;
-          display: flex;
-          justify-content: center;
           text-decoration: none;
-          @media (max-width:480px) {
-            justify-content: flex-start;
-           }
         }
         }
       }
@@ -45,5 +42,6 @@ footer {
         margin-right: 0.3rem;
       }
   }
+
     
   
