--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,7 +7,7 @@
 @import "./components/card__btn";
 @import "./components/pinkBtn";
 @import "./components/loader.scss";
-@import "./components/heart.scss";
+@import "./components/heart";
 
 @import "./layout/header";
 
