--- a/sass/pages/_restaurants.scss
+++ b/sass/pages/_restaurants.scss
@@ -61,10 +61,13 @@
   .menu__name{
     line-height: 0;
     padding-left:1rem ;
+    width: 100%;
   }
   .menu__price{
     padding-right: 1.25rem;
     font-weight: bold;
+    min-width: 30px;
+    
 }
   
 .menu__card{
@@ -76,11 +79,11 @@
   display: flex;
   align-items: center;
   cursor: pointer;
-  justify-content: space-between;
+  
   animation: opacity 1s both;
   &:hover .menu__check {
     @include flexbox;
-    animation: slide 0.5s ease ;
+    animation: slide 0.5s ease-in-out ;
    
  
   }
