--- a/sass/pages/_restaurants.scss
+++ b/sass/pages/_restaurants.scss
@@ -92,7 +92,8 @@ animation: slide 0.5s ease-in-out both;
   i {
 	  font-size: 1.8rem;
 	  color: white;
-	  animation: rotate 1s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+	  animation: rotate 1s ;
+	  transition: 0.4s ease-in-out;
   }
 }
 
@@ -145,7 +146,7 @@ animation-delay: 0.5s;
   transform: rotate(0);
 }
 100% {
-  transform: rotate(360deg);
+  transform: rotate(359deg);
 }
 }
 
