--- a/sass/pages/_homepage.scss
+++ b/sass/pages/_homepage.scss
@@ -2,10 +2,8 @@
 .local {
   padding: 0.94rem 0rem;
   text-align: center;
-  background-color: #EAEAEA;
-  box-shadow: inset #686868 0.06rem 0.3rem grey;
-  color: #353535;
-  font-weight: bold;
+  background-color: $color-loc;
+  @include shadow-loc;
 }
 
 // reservation
@@ -27,7 +25,7 @@
 .fonc__container {
  
   align-items: center;
-  background-color: #fff;
+  background-color: $color-card;
   padding: 0.9rem 0;
 
   @media (max-width:500px) {
@@ -61,12 +59,9 @@
     width: 15rem;
     margin: 1rem;
     border-radius: 1.5rem;
-    background-color: #f6f6f6;
-    box-shadow: 0 0.12rem 0.3rem grey;
-    font-weight: bold;
     list-style-type: none;
     margin-top: 2rem;
-
+    @include shadow-lists;
     @media (max-width:500px) {
       margin-top: 1rem;
     }
@@ -79,7 +74,7 @@
       counter-increment: section;
       margin-left: -2.5rem;
       border-radius: 50%;
-      color: white;
+      color: $color-card;
       background-color: $color-primary;
       padding: 0.24rem 0.6rem;
     }
@@ -87,7 +82,6 @@
 
   .fonc__lists i {
     margin-right: 2rem;
-
     @media (max-width:900px) {
       margin-right: 0.6rem;
       font-size: 0.7rem;
@@ -123,11 +117,11 @@
 }
 
 .card {
-  background-color: white;
+  background-color: $color-card;
   border-radius: 1rem;
   position: relative;
   display: block;
-  box-shadow: 0.12rem 0.12rem 0.12rem lightgrey;
+  @include shadow-card;
   &__img {
     height: 12rem;
     width: 100%;
