--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -5,6 +5,10 @@ $body-color: #f6f6f6;
 $color-primary: #9356DC;
 $color-secondary: #FF79DA;
 $color-tertiary: #99E2D0;
+$color-background: #f6f6f6;
+$color-card: #FFF;
+$color-loc:#EAEAEA;
+$color-footer: #354146;
 
 // Loader
 
