--- a/sass/pages/_restaurants.scss
+++ b/sass/pages/_restaurants.scss
@@ -1,11 +1,11 @@
 .img__image {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	position: fixed;
-	@media (max-width:500px) {
-	  height: 30%;
-	 }
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: fixed;
+  @media (max-width:500px) {
+    height: 30%;
+   }
 }
 
 // Menu
@@ -42,17 +42,17 @@ border-radius: 2rem 2rem 0 0;
 .submenu {
   padding: 0 1rem;
   &__title{
-	font-size: 1rem;
-	margin-top: 2rem;
-	&::after{
-	  content: "";
-	  width: 3rem;
-	  height: 0.25rem;
-	  background-color: $color-tertiary;
-	  position: absolute;
-	  display: flex;
-	  justify-content: left;
-	}
+  font-size: 1rem;
+  margin-top: 2rem;
+  &::after{
+    content: "";
+    width: 3rem;
+    height: 0.25rem;
+    background-color: $color-tertiary;
+    position: absolute;
+    display: flex;
+    justify-content: left;
+  }
   }
 }
 .menu__name{
@@ -67,131 +67,87 @@ min-width: 30px;
 
 }
 
-.menu__card{
-height: 5rem;
-margin-top: 1.8rem;
-border-radius: 0.9rem;
-background-color: $color-card;
-overflow: hidden;
-display: flex;
-align-items: center;
-cursor: pointer;
-animation: opacity 1s both;
-&:hover .menu__check {
-@include flexbox;
-animation: slide 0.5s ease-in-out both;
-}
-.menu__check {
-  display: none;
-  background: $color-tertiary;
-  border-radius: 0 0.9rem 0 0;
-  right: 0;
-  padding: 0 2rem;
-  height: 100%;
-  
-  i {
-	  font-size: 1.8rem;
-	  color: white;
-	  animation: rotate 1s ;
-	  transition: 0.4s ease-in-out;
+.menu__card {
+  height: 5rem;
+  margin-top: 1.8rem;
+  border-radius: 0.9rem;
+  background-color: $color-card;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  animation: opacity 1s both;
+  &:hover .menu__check {
+    @include flexbox;
+    margin-right: 0px;
+    transition: margin-right 0.5s
   }
-}
+  .menu__check {
+    display: flex;
+    align-items: center;
+    margin-right: -93px;
+    transition: margin-right 1s;
+    background: $color-tertiary;
+    border-radius: 0 0.9rem 0 0;
+    padding: 0 2rem;
+    height: 100%;
+    
+    i {
+      font-size: 1.8rem;
+      color: white;
+      animation: rotate 1s ;
+      transition: 0.4s ease-in-out;
+    }
+  }
 
-h3{
-@media (max-width:500px) {
-  font-size:1rem;
- }
-}
-p{
- @media (max-width:500px) {
-  font-size:.8rem;
- 
- }
-}
+  h3{
+    @media (max-width:500px) {
+      font-size:1rem;
+    }
+  }
+  p{
+    @media (max-width:500px) {
+      font-size:.8rem;
+    }
+  }
 }
 
 // animation card opacity
 @keyframes opacity {
-0% {
-		opacity: 0;
-}
-100% {
-		opacity: 1;
-}
-}
+  0% {
+      opacity: 0;
+  }
+  100% {
+      opacity: 1;
+  }
+  }
 
-.menu__card:nth-child(1) {
-animation-delay: 0.1s;
-}
+  .menu__card:nth-child(1) {
+    animation-delay: 0.1s;
+  }
 
-.menu__card:nth-child(2) {
-animation-delay: 0.2s;
-}
+  .menu__card:nth-child(2) {
+    animation-delay: 0.2s;
+  }
 
-.menu__card:nth-child(3){
-animation-delay: 0.3s;
-}
+  .menu__card:nth-child(3){
+    animation-delay: 0.3s;
+  }
 
-.menu__card:nth-child(4) {
-animation-delay: 0.4s;
-}
+  .menu__card:nth-child(4) {
+    animation-delay: 0.4s;
+  }
 
-.menu__card:nth-child(5) {
-animation-delay: 0.5s;
-}
+  .menu__card:nth-child(5) {
+  animation-delay: 0.5s;
+  }
 
 // Animation bouton check 
-@keyframes rotate {
-0% {
-  transform: rotate(0);
+  @keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(359deg);
+  }
 }
-100% {
-  transform: rotate(359deg);
-}
-}
-
-@keyframes slide
-{
-	0%
-	{
-		
-		transform: translateX(100px);
-	}
-	100%
-	{
-		transform: translateX(0px);
-	}
-}
-
-  
-
- 
-
-
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  
-  
-
-  
- 
-  
-  
-
-
-  
- 
