--- a/sass/pages/_restaurants.scss
+++ b/sass/pages/_restaurants.scss
@@ -91,12 +91,16 @@ min-width: 30px;
 	  border-radius: 0 0.9rem 0 0;
 	  padding: 0 2rem;
 	  height: 100%;
+	  &:hover{
+		i {
+			color: white;
+			animation: rotate 0.5s ease ;
+		  }
+	  }
   
 	  i {
 		font-size: 1.8rem;
 		color: white;
-		animation: rotate 1s ;
-		transition: 0.4s ease-in-out;
 	  }
 	}
 
@@ -149,7 +153,7 @@ min-width: 30px;
 	  transform: rotate(0);
 	}
 	100% {
-	  transform: rotate(359deg);
+	  transform: rotate(360deg);
 	}
 }
 
