--- a/sass/pages/_restaurants.scss
+++ b/sass/pages/_restaurants.scss
@@ -59,6 +59,9 @@ border-radius: 2rem 2rem 0 0;
 line-height: 0;
 padding-left:1rem ;
 width: 100%;
+overflow: hidden;
+white-space: nowrap;
+text-overflow: ellipsis;
 }
 .menu__price{
 padding-right: 1.25rem;
@@ -66,7 +69,7 @@ font-weight: bold;
 min-width: 30px;
 
 }
-
+	
 .menu__card {
 	height: 5rem;
 	margin-top: 1.8rem;
@@ -83,6 +86,7 @@ min-width: 30px;
 			animation: rotate 0.5s ease ;
 		  }
 	  }
+	  
 	&:hover .menu__check {
 	  @include flexbox;
 	  margin-right: 0px;
@@ -97,16 +101,16 @@ min-width: 30px;
 	  border-radius: 0 0.9rem 0 0;
 	  padding: 0 2rem;
 	  height: 100%;
+
 	  i {
 		font-size: 1.8rem;
 		color: white;
 	  }
 	}
-
-
 	h3{
 		@media (max-width:500px) {
 		  font-size:1rem;
+		  
 		}
 	  }
 	  p{
