--- a/sass/pages/_homepage.scss
+++ b/sass/pages/_homepage.scss
@@ -18,6 +18,7 @@
   @media (max-width:500px) {
     text-align: center;
     white-space: pre-line;
+    font-size: 1rem
   }
 }
 
@@ -28,9 +29,7 @@
   background-color: $color-card;
   padding: 0.9rem 0;
 
-  @media (max-width:500px) {
-    height: 22rem;
-  }
+ 
 
   h2 {
     @include h2-style;
@@ -48,7 +47,7 @@
     justify-content: center;
     white-space: nowrap;
 
-    @media (min-width:300px) and (max-width:600px) {
+    @media (min-width:300px) and (max-width:900px) {
       flex-direction: column;
       align-items: center;
     }
