--- a/sass/pages/_homepage.scss
+++ b/sass/pages/_homepage.scss
@@ -50,6 +50,7 @@
     @media (min-width:300px) and (max-width:900px) {
       flex-direction: column;
       align-items: center;
+      padding-right: 1rem;
     }
   }
 
