setting card menu_name

--- a/sass/pages/_restaurants.scss
+++ b/sass/pages/_restaurants.scss
@@ -55,14 +55,25 @@ border-radius: 2rem 2rem 0 0;
   }
   }
 }
-.menu__name{
-line-height: 0;
+.menu__name {
+// line-height: 0;
 padding-left:1rem ;
 width: 100%;
+overflow: hidden;
+
+h3{
 overflow: hidden;
 white-space: nowrap;
 text-overflow: ellipsis;
 }
+p{
+overflow: hidden;
+white-space: nowrap;
+text-overflow: ellipsis;
+}
+}
+
+
 .menu__price{
 padding-right: 1.25rem;
 font-weight: bold;
